Updates by shift Id too to prevent updating all of same emp

--- a/client/src/components/newshiftmodal/newshiftmodal.scss
+++ b/client/src/components/newshiftmodal/newshiftmodal.scss
@@ -31,7 +31,7 @@
         font-size: 1.1em;
         border: 2px solid darkgray;
         padding: 8px 5px 8px 5px;
-        margin: 15px;
+        margin: 7px;
         background-color: rgb(223, 221, 221);
 
         &.active {
